// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a loading indicator while running query 1`] = `
<Classify(LoadingIndicator)>
  <span>
    Fetching Data...
  </span>
</Classify(LoadingIndicator)>
`;

exports[`renders cart options when item has no options 1`] = `
<CartOptions
  cartItem={
    Object {
      "options": Array [],
    }
  }
  configItem={Object {}}
/>
`;

exports[`renders cart options when item has options 1`] = `
<CartOptions
  cartItem={
    Object {
      "options": Array [
        "a",
        "b",
        "c",
      ],
    }
  }
/>
`;

exports[`renders null when item not supplied 1`] = `null`;
